test/fail/entitycomplexpropkind.app
// Expected: Reference type or Composite type

application test

section datamodel

  entity User {
    authoredPapers -> String
  }

  entity Paper {
  }